--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spa_27",
   "version": "1.0.0",
   "description": "Single page application",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +19,8 @@
     "react"
   ],
   "author": "Roman Dumanskyi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
